# nutag

./: Cargo.toml  HOMEBREW_SETUP.md  LICENSE  README.md  \  newtag
.github/workflows/: release.yml  update-formula.yml
Formula/: nutag.rb
src/: main.rs
