[package]
name = "nutag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
nanoserde = "0.1.37"
semver = "1.0.21"
ureq = "2.9.6"
log = "0.4"
fern = { version = "0.6", default-features = false }
argh = { version = "0.1.12", default-features = false }
dialoguer = { version = "0.11.0", default-features = false }
regex-lite = "0.1.5"
owo-colors = "4.0.0"
indoc = "2.0.4"

[profile.release]
lto = "fat"
opt-level = "z"
strip = "symbols"
