[package]
name = "nutag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
nanoserde = { version = "0.2", default-features = false, features = ["json"] }
semver = "1.0.21"
ureq = "3"
log = "0.4"
fern = { version = "0.7", default-features = false }
argh = { git = "https://github.com/google/argh", branch = "master", default-features = false }
dialoguer = { version = "0.12", default-features = false }
regex-lite = "0.1.5"
owo-colors = "4.0.0"
indoc = "2.0.4"

[profile.release]
lto = "fat"
opt-level = "z"
strip = "symbols"
