[package]
name = "nutag"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
nanoserde = "0.2.1"
semver = "1.0.21"
ureq = { version = "3.1.2", default-features = false, features = ["rustls"] }
log = "0.4"
fern = { version = "0.7", default-features = false }
bpaf = { version = "0.9", default-features = false, features = [
  "autocomplete",
] }
dialoguer = { version = "0.12.0", default-features = false }
regex-lite = "0.1.5"
owo-colors = "4.0.0"
indoc = "2.0.4"

[profile.release]
lto = "fat"
opt-level = "z"
strip = "symbols"
